--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "package",
   "version": "0.0.0",
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm": ">= 16.x"
   },
   "scripts": {
     "dev": "vite",
