--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "engines": {
     "node": "18.x",
-    "npm": ">= 16.x"
+    "npm": "8.x"
   },
   "scripts": {
     "dev": "vite",
