--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@vue/cli-service": "^5.0.8",
     "express": "^4.18.1",
     "serve-static": "^1.15.0",
     "vue": "^3.2.38",
