--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@vue/cli-service": "^5.0.8",
     "express": "^4.18.1",
+    "font-awesome": "^4.7.0",
     "serve-static": "^1.15.0",
     "vue": "^3.2.38",
     "vue-sweetalert2": "^5.0.5"
