--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-.DS_Store 
+.DS_Store
 dist-ssr
 coverage
 *.local
@@ -17,6 +17,8 @@ coverage
 /cypress/screenshots/
 
 # Editor directories and files
+/client
+node_modules
 .vscode/*
 !.vscode/extensions.json
 .idea
