--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "npm": "8.x"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "nodemon server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
@@ -19,14 +19,19 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@vue/cli-service": "^5.0.8",
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "font-awesome": "^4.7.0",
+    "mongodb": "^4.9.1",
     "serve-static": "^1.15.0",
     "vue": "^3.2.38",
     "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
+    "nodemon": "^2.0.19",
     "vite": "^3.0.4"
   }
 }
